--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     376553022662786049       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        "test 1"      # Project title
-  author:       "test1"      # Your name
-  discord:      "I dont have one"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  wokwi_id:     438906683385358337       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "Design 1"      # Project title
+  author:       "Design 1"      # Your name
+  discord:      "Design 1"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "It is not empty so I will not expect an error"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
